// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When given a danger message Snapshot renders properly 1`] = `
<div
  className="notification is-danger"
>
  <button
    className="delete"
    onClick={[Function]}
  />
  <span>
    Danger Will Robinson!
  </span>
</div>
`;

exports[`When given a success message Snapshot renders properly 1`] = `
<div
  className="notification is-success"
>
  <button
    className="delete"
    onClick={[Function]}
  />
  <span>
    Hello World!
  </span>
</div>
`;
